// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`asi.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
foo;
// prettier-ignore
[1].map();

=====================================output=====================================
foo
// prettier-ignore
;[1].map()

================================================================================
`;

exports[`asi.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
foo;
// prettier-ignore
[1].map();

=====================================output=====================================
foo;
// prettier-ignore
[1].map();

================================================================================
`;

exports[`class-expression-decorator.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
(
  // prettier-ignore
  @decorator
  class {}
);

=====================================output=====================================
;// prettier-ignore
(
  @decorator
  class {}
)

================================================================================
`;

exports[`class-expression-decorator.js - {"semi":false} format[acorn] 1`] = `
"Unexpected character '@' (3:3)
  1 | (
  2 |   // prettier-ignore
> 3 |   @decorator
    |   ^
  4 |   class {}
  5 | );
  6 |
Cause: Unexpected character '@' (3:2)"
`;

exports[`class-expression-decorator.js - {"semi":false} format[espree] 1`] = `
"Unexpected character '@' (3:3)
  1 | (
  2 |   // prettier-ignore
> 3 |   @decorator
    |   ^
  4 |   class {}
  5 | );
  6 |
Cause: Unexpected character '@'"
`;

exports[`class-expression-decorator.js - {"semi":false} format[flow] 1`] = `
"Unexpected token \`@\` (3:3)
  1 | (
  2 |   // prettier-ignore
> 3 |   @decorator
    |   ^
  4 |   class {}
  5 | );
  6 |
Cause: Unexpected token \`@\` (3:2)"
`;

exports[`class-expression-decorator.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(
  // prettier-ignore
  @decorator
  class {}
);

=====================================output=====================================
// prettier-ignore
(
  @decorator
  class {}
);

================================================================================
`;

exports[`class-expression-decorator.js format[acorn] 1`] = `
"Unexpected character '@' (3:3)
  1 | (
  2 |   // prettier-ignore
> 3 |   @decorator
    |   ^
  4 |   class {}
  5 | );
  6 |
Cause: Unexpected character '@' (3:2)"
`;

exports[`class-expression-decorator.js format[espree] 1`] = `
"Unexpected character '@' (3:3)
  1 | (
  2 |   // prettier-ignore
> 3 |   @decorator
    |   ^
  4 |   class {}
  5 | );
  6 |
Cause: Unexpected character '@'"
`;

exports[`class-expression-decorator.js format[flow] 1`] = `
"Unexpected token \`@\` (3:3)
  1 | (
  2 |   // prettier-ignore
> 3 |   @decorator
    |   ^
  4 |   class {}
  5 | );
  6 |
Cause: Unexpected token \`@\` (3:2)"
`;

exports[`directive.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
// prettier-ignore
'use strict';
[].forEach();

function foo() {
// prettier-ignore
'use strict';
[].forEach();
}

=====================================output=====================================
// prettier-ignore
'use strict'
;[].forEach()

function foo() {
  // prettier-ignore
  'use strict'
  ;[].forEach()
}

================================================================================
`;

exports[`directive.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// prettier-ignore
'use strict';
[].forEach();

function foo() {
// prettier-ignore
'use strict';
[].forEach();
}

=====================================output=====================================
// prettier-ignore
'use strict';
[].forEach();

function foo() {
  // prettier-ignore
  'use strict';
  [].forEach();
}

================================================================================
`;

exports[`head-ignored.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
(
  // prettier-ignore
[]
).forEach()

=====================================output=====================================
;// prettier-ignore
[].forEach()

================================================================================
`;

exports[`head-ignored.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(
  // prettier-ignore
[]
).forEach()

=====================================output=====================================
// prettier-ignore
[].forEach();

================================================================================
`;
